[workspace]
resolver = "2"
members = [
    "tomplate",
    "tomplate-macros",
    "tomplate-build",
    "examples/sql_queries",
]

[workspace.package]
version = "0.1.0"
authors = ["Cyanism <github@cyan.slmail.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cyanistic/tomplate"
description = "TOML-based compile-time template composition for Rust"
keywords = ["template", "compile-time", "macro", "sql", "composition"]
categories = ["template-engine", "development-tools::build-utils"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

# Template engines
handlebars = "5.1"
tera = "1.19"
minijinja = "1.0"

# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Build dependencies
glob = "0.3"
walkdir = "2.4"
