[package]
name = "tomplate-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time utilities for the tomplate TOML-based template composition library"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# File discovery
glob.workspace = true
walkdir.workspace = true

# For generating output
quote.workspace = true
proc-macro2.workspace = true