[package]
name = "tomplate-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Procedural macros for the tomplate TOML-based template composition library"
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
tomplate-build = { version = "0.1", path = "../tomplate-build" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Template engines for compile-time processing
handlebars = { workspace = true, optional = true }
tera = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }

[features]
default = ["simple"]
simple = []
