[package]
name = "tomplate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tomplate-macros = { version = "0.1", path = "../tomplate-macros", default-features = false }

# Re-export for convenience
tomplate-build = { version = "0.1", path = "../tomplate-build", optional = true }

[features]
default = ["simple"]
build = ["tomplate-build"]
simple = ["tomplate-macros/simple"]
handlebars = ["tomplate-macros/handlebars"]
tera = ["tomplate-macros/tera"]
minijinja = ["tomplate-macros/minijinja"]
