[package]
name = "sql-queries-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tomplate = { path = "../../tomplate" }

[build-dependencies]
tomplate-build = { path = "../../tomplate-build" }

[features]
default = []
handlebars = ["tomplate/handlebars"]
tera = ["tomplate/tera"]
minijinja = ["tomplate/minijinja"]